# chat-gpt-cli

./: .gitignore  README.md  main.py  pyproject.toml
chat/: __init__.py  chat.py
