[tool.poetry]
name = "cli-chat"
version = "0.1.0"
description = "This is a simple CLI for Chat with GPT"
authors = ["Eduardo Alvarez <eduardo.alvarez@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
openai = "^1.5.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.351"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
indent-style = "space"
quote-style = "double"


